--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Partytown-demo</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/3/lumen/bootstrap.min.css"
+    />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <h1>This doc demonstrates how partytown as a library works</h1>
+  </body>
 </html>
