--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://bootswatch.com/3/lumen/bootstrap.min.css"
     />
     <script src="index.js"></script>
+    <script src="debug/partytown.js"></script>
+    <script type="text/partytown" src="via-partytown.js"></script>
   </head>
   <body>
     <h1>This doc demonstrates how partytown as a library works</h1>
