--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://bootswatch.com/3/lumen/bootstrap.min.css"
     />
     <script src="index.js"></script>
-    <script src="debug/partytown.js"></script>
+    <script src="/~partytown/debug/partytown.js"></script>
     <script type="text/partytown" src="via-partytown.js"></script>
   </head>
   <body>
