--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   </head>
   <body>
     <h1>This doc demonstrates how partytown as a library works</h1>
+    <hr>
+    <div id="viaPartytown">
+        <p>New divs will be appended to the dom every 5 seconds</p>
+    </div>
   </body>
 </html>
