--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Edgemesh Client Begin -->
+    <script
+      async
+      type="text/javascript"
+      src="https://static.edgeme.sh/client.js"
+      onload="window.edgemesh = new Edgemesh()"
+    ></script>
+    <!-- Edgemesh Client End -->
     <title>Partytown-demo</title>
     <link
       rel="stylesheet"
@@ -12,10 +20,10 @@
     <script
       src="/~partytown/debug/partytown.js"
       debug="true"
-      logGetters
-      logSetters
-      logStackTraces
-      logScriptExecution
+      logGetters="true"
+      logSetters="true"
+      logStackTraces="true"
+      logScriptExecution="true"
     ></script>
     <script type="text/partytown" src="via-partytown.js"></script>
   </head>
